--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager . HangoutNow --platform=darwin --arch=x64 --icon=resources/icon.icns --ignore resources --ignore yarn.lock"
   },
   "dependencies": {
     "electron": "^1.6.6",
+    "extend": "^3.0.1",
     "google-calendar": "^1.3.2",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "qs": "^6.4.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^8.7.0"
   }
 }
