--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   },
   "dependencies": {
     "electron": "^1.6.6",
+    "electron-packager": "^12.1.0",
     "extend": "^3.0.1",
     "google-calendar": "^1.3.2",
     "node-fetch": "^1.6.3",
     "qs": "^6.4.0"
   },
   "devDependencies": {
-    "electron-installer-dmg": "^0.2.1",
-    "electron-packager": "^8.7.0"
+    "electron-installer-dmg": "^0.2.1"
   }
 }
